// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createAuth config snapshot should match snapshot with Google OAuth 1`] = `
{
  "account": {
    "accountLinking": {
      "enabled": true,
      "trustedProviders": [
        "google",
      ],
    },
    "fields": {
      "accessToken": "access_token",
      "accessTokenExpiresAt": "access_token_expires_at",
      "accountId": "account_id",
      "createdAt": "created_at",
      "idToken": "id_token",
      "providerId": "provider_id",
      "refreshToken": "refresh_token",
      "refreshTokenExpiresAt": "refresh_token_expires_at",
      "updatedAt": "updated_at",
      "userId": "user_id",
    },
  },
  "advanced": {
    "disableCSRFCheck": true,
  },
  "baseURL": "http://localhost:3000",
  "database": {
    "id": "pg-pool",
    "options": {
      "connectionString": "postgresql://test:test@localhost:5432/test",
      "options": "-c search_path=auth",
    },
  },
  "databaseHooks": {
    "account": {
      "create": {
        "before": "[Function]",
      },
      "update": {
        "before": "[Function]",
      },
    },
  },
  "emailAndPassword": {
    "enabled": true,
  },
  "hooks": {
    "before": "[Function]",
  },
  "plugins": [
    {
      "id": "email-otp",
    },
    {
      "id": "open-api",
    },
  ],
  "secret": "test-secret-for-unit-tests-only",
  "session": {
    "fields": {
      "createdAt": "created_at",
      "expiresAt": "expires_at",
      "ipAddress": "ip_address",
      "updatedAt": "updated_at",
      "userAgent": "user_agent",
      "userId": "user_id",
    },
  },
  "socialProviders": {
    "google": {
      "clientId": "google-client-id",
      "clientSecret": "google-client-secret",
    },
  },
  "trustedOrigins": [
    "http://localhost:3000",
    "http://localhost:5173",
  ],
  "user": {
    "fields": {
      "createdAt": "created_at",
      "emailVerified": "email_verified",
      "updatedAt": "updated_at",
    },
  },
  "verification": {
    "fields": {
      "createdAt": "created_at",
      "expiresAt": "expires_at",
      "updatedAt": "updated_at",
    },
  },
}
`;

exports[`createAuth config snapshot should match snapshot without Google OAuth 1`] = `
{
  "account": {
    "fields": {
      "accessToken": "access_token",
      "accessTokenExpiresAt": "access_token_expires_at",
      "accountId": "account_id",
      "createdAt": "created_at",
      "idToken": "id_token",
      "providerId": "provider_id",
      "refreshToken": "refresh_token",
      "refreshTokenExpiresAt": "refresh_token_expires_at",
      "updatedAt": "updated_at",
      "userId": "user_id",
    },
  },
  "advanced": {
    "disableCSRFCheck": true,
  },
  "baseURL": "http://localhost:3000",
  "database": {
    "id": "pg-pool",
    "options": {
      "connectionString": "postgresql://test:test@localhost:5432/test",
      "options": "-c search_path=auth",
    },
  },
  "databaseHooks": {
    "account": {
      "create": {
        "before": "[Function]",
      },
      "update": {
        "before": "[Function]",
      },
    },
  },
  "emailAndPassword": {
    "enabled": true,
  },
  "hooks": {
    "before": "[Function]",
  },
  "plugins": [
    {
      "id": "email-otp",
    },
    {
      "id": "open-api",
    },
  ],
  "secret": "test-secret-for-unit-tests-only",
  "session": {
    "fields": {
      "createdAt": "created_at",
      "expiresAt": "expires_at",
      "ipAddress": "ip_address",
      "updatedAt": "updated_at",
      "userAgent": "user_agent",
      "userId": "user_id",
    },
  },
  "trustedOrigins": [
    "http://localhost:3000",
    "http://localhost:5173",
  ],
  "user": {
    "fields": {
      "createdAt": "created_at",
      "emailVerified": "email_verified",
      "updatedAt": "updated_at",
    },
  },
  "verification": {
    "fields": {
      "createdAt": "created_at",
      "expiresAt": "expires_at",
      "updatedAt": "updated_at",
    },
  },
}
`;
